Update subMaxLevel in index.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,27 @@
-...  // previous content
-    subMaxLevel: 0,
-...  // following content
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Title Here</title>
+    <style>
+        /* Your styles here */
+    </style>
+    <script>
+        // Your scripts here
+    </script>
+</head>
+<body>
+    <script>
+        // Some JavaScript code
+        const config = {
+            // Other properties
+            subMaxLevel: 0,
+            // Remaining properties...
+        };
+    </script>
+    <h1>Welcome to the Vietnam Market Study</h1>
+    <p>This is a sample content of your HTML file.</p>
+    <!-- Other HTML content... -->
+</body>
+</html>
