--- a/index.html
+++ b/index.html
@@ -1,5 +1,24 @@
-    homepage: 'home.md',
-    alias: {
-      '/README.md': '/home.md',
-      '/': '/home.md'
-    },
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title> My Docsify </title>
+    <link rel="stylesheet" href="https://unpkg.com/docsify/themes/vue.css" />
+</head>
+<body>
+    <div id="app"></div>
+    <script src="https://unpkg.com/docsify/lib/docsify.min.js"></script>
+    <script>
+        window.$docsify = {
+            name: 'My Docsify',
+            repo: '',
+            loadSidebar: true,
+            subMaxLevel: 2,
+            homepage: 'home.md',
+            alias: { '/README.md': '/home.md', '/': '/home.md' },
+            // More configuration options...
+        };
+    </script>
+</body>
+</html>
