Update index.html title to 'Vietnam Market Study 101'

--- a/index.html
+++ b/index.html
@@ -1,24 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title> My Docsify </title>
-    <link rel="stylesheet" href="https://unpkg.com/docsify/themes/vue.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vietnam Market Study 101</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="app"></div>
-    <script src="https://unpkg.com/docsify/lib/docsify.min.js"></script>
-    <script>
-        window.$docsify = {
-            name: 'My Docsify',
-            repo: '',
-            loadSidebar: true,
-            subMaxLevel: 2,
-            homepage: 'home.md',
-            alias: { '/README.md': '/home.md', '/': '/home.md' },
-            // More configuration options...
-        };
-    </script>
+    <h1>Welcome to Vietnam Market Study 101</h1>
+    <p>Your content goes here...</p>
+    <script src="script.js"></script>
 </body>
 </html>
